@@ -5,6 +5,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
       /etc/sysconfig/pbs_mom
   b - when spool_as_final_name is configured for the mom, no longer send email 
       messages about not being able to copy the spool file
+  f - added logging for email events, allows the admin to check if emails are 
+      being sent correctly
 
 2.4.3
   b - fix PBSD_authenticate so it correctly splits PATH with : instead of ;
